data/parser.out
Created by PLY version 3.11 (http://www.dabeaz.com/ply)

Unused terminals:

    BITWISE_AND
    BITWISE_NAND
    BITWISE_NOR
    BITWISE_NOT
    BITWISE_OR
    BITWISE_XNOR
    BITWISE_XOR
    CASEX
    CASZ
    CEQ
    CNE
    COMMENT
    CONCAT
    COND_OP
    CONSTANT_EXPRESSION
    DEFPARAM
    DIRECTIVE
    DISABLE
    ENDFUNCTION
    ENDGENERATE
    ENDSPECIFY
    ENDTASK
    EQ
    FOR
    FOREVER
    FORK
    FUNCTION
    GE
    GENERATE
    GENVAR
    GT
    INITIAL_CONSTRUCT
    INTEGER
    JOIN
    LARGE
    LBRACE
    LOGICAL_AND
    LOGICAL_NOT
    LOGICAL_OR
    LSHIFT
    LSHIFTA
    LT
    MEDIUM
    MULTI_CONCAT
    NE
    POWER
    RBRACE
    REAL
    REDUCTION_NAND
    REDUCTION_NOR
    REDUCTION_XNOR
    REPEAT
    RETURN
    RSHIFT
    RSHIFTA
    SCALARED
    SIGNED
    SMALL
    SPECIFY
    SUPPLY0
    SUPPLY1
    TASK
    TIME
    TRI
    TRI0
    TRI1
    TRIAND
    TRIOR
    TRIREG
    VECTORED
    WAIT
    WAND
    WHILE
    WILD_EQ
    WILD_NE
    WOR

Grammar

Rule 0     S' -> design
Rule 1     design -> module_list
Rule 2     module_list -> module module_list
Rule 3     module_list -> module
Rule 4     module -> MODULE ID LPAREN port_list RPAREN SEMICOLON module_items ENDMODULE
Rule 5     port_list -> port COMMA port_list
Rule 6     port_list -> port
Rule 7     port_list -> empty
Rule 8     port -> INPUT port_type_opt ID
Rule 9     port -> OUTPUT port_type_opt ID
Rule 10    port -> INOUT port_type_opt ID
Rule 11    port_type_opt -> range_opt
Rule 12    port_type_opt -> empty
Rule 13    range_opt -> LBRACKET NUMBER COLON NUMBER RBRACKET
Rule 14    range_opt -> empty
Rule 15    module_items -> module_item module_items
Rule 16    module_items -> module_item
Rule 17    module_items -> empty
Rule 18    module_item -> net_declaration
Rule 19    module_item -> parameter_declaration
Rule 20    module_item -> instantiation
Rule 21    module_item -> continuous_assign
Rule 22    module_item -> always_construct
Rule 23    module_item -> initial_construct
Rule 24    net_declaration -> WIRE range_opt ID SEMICOLON
Rule 25    net_declaration -> REG range_opt ID SEMICOLON
Rule 26    parameter_declaration -> PARAMETER parameter_assign_list SEMICOLON
Rule 27    parameter_declaration -> LOCALPARAM parameter_assign_list SEMICOLON
Rule 28    parameter_assign_list -> parameter_assignment COMMA parameter_assign_list
Rule 29    parameter_assign_list -> parameter_assignment
Rule 30    parameter_assignment -> ID EQUAL expression
Rule 31    instantiation -> ID parameter_value_assignment_opt ID LPAREN named_port_connection_list RPAREN SEMICOLON
Rule 32    parameter_value_assignment_opt -> HASH LPAREN parameter_assignment COMMA parameter_value_assignment_opt RPAREN
Rule 33    parameter_value_assignment_opt -> HASH LPAREN parameter_assignment RPAREN
Rule 34    parameter_value_assignment_opt -> empty
Rule 35    named_port_connection_list -> DOT ID LPAREN expression RPAREN COMMA named_port_connection_list
Rule 36    named_port_connection_list -> DOT ID LPAREN expression RPAREN
Rule 37    named_port_connection_list -> empty
Rule 38    continuous_assign -> ASSIGN ID EQUAL expression SEMICOLON
Rule 39    expression -> term
Rule 40    expression -> expression PLUS term
Rule 41    expression -> expression MINUS term
Rule 42    expression -> expression TIMES term
Rule 43    expression -> expression DIVIDE term
Rule 44    expression -> expression MODULO term
Rule 45    expression -> LPAREN expression RPAREN
Rule 46    term -> ID
Rule 47    term -> NUMBER
Rule 48    term -> STRING
Rule 49    initial_construct -> INITIAL statement
Rule 50    always_construct -> ALWAYS AT LPAREN event_expression RPAREN statement
Rule 51    always_construct -> ALWAYS LPAREN event_expression RPAREN statement
Rule 52    always_construct -> ALWAYS statement
Rule 53    event_expression -> POSEDGE ID
Rule 54    event_expression -> NEGEDGE ID
Rule 55    event_expression -> ID
Rule 56    statement -> blocking_assignment SEMICOLON
Rule 57    statement -> non_blocking_assignment SEMICOLON
Rule 58    statement -> if_statement
Rule 59    statement -> case_statement
Rule 60    statement -> begin_end_block
Rule 61    blocking_assignment -> ID BLOCKING_ASSIGN expression
Rule 62    non_blocking_assignment -> ID NON_BLOCKING_ASSIGN expression
Rule 63    if_statement -> IF LPAREN expression RPAREN statement
Rule 64    if_statement -> IF LPAREN expression RPAREN statement ELSE statement
Rule 65    case_statement -> CASE LPAREN expression RPAREN case_item_list ENDCASE
Rule 66    case_item_list -> case_item case_item_list
Rule 67    case_item_list -> case_item
Rule 68    constant_expression -> expression
Rule 69    constant_expression -> NUMBER
Rule 70    case_item -> constant_expression COLON statement
Rule 71    case_item -> DEFAULT COLON statement
Rule 72    begin_end_block -> BEGIN statement_list END
Rule 73    statement_list -> statement statement_list
Rule 74    statement_list -> statement
Rule 75    empty -> <empty>

Terminals, with rules where they appear

ALWAYS               : 50 51 52
ASSIGN               : 38
AT                   : 50
BEGIN                : 72
BITWISE_AND          : 
BITWISE_NAND         : 
BITWISE_NOR          : 
BITWISE_NOT          : 
BITWISE_OR           : 
BITWISE_XNOR         : 
BITWISE_XOR          : 
BLOCKING_ASSIGN      : 61
CASE                 : 65
CASEX                : 
CASZ                 : 
CEQ                  : 
CNE                  : 
COLON                : 13 70 71
COMMA                : 5 28 32 35
COMMENT              : 
CONCAT               : 
COND_OP              : 
CONSTANT_EXPRESSION  : 
DEFAULT              : 71
DEFPARAM             : 
DIRECTIVE            : 
DISABLE              : 
DIVIDE               : 43
DOT                  : 35 36
ELSE                 : 64
END                  : 72
ENDCASE              : 65
ENDFUNCTION          : 
ENDGENERATE          : 
ENDMODULE            : 4
ENDSPECIFY           : 
ENDTASK              : 
EQ                   : 
EQUAL                : 30 38
FOR                  : 
FOREVER              : 
FORK                 : 
FUNCTION             : 
GE                   : 
GENERATE             : 
GENVAR               : 
GT                   : 
HASH                 : 32 33
ID                   : 4 8 9 10 24 25 30 31 31 35 36 38 46 53 54 55 61 62
IF                   : 63 64
INITIAL              : 49
INITIAL_CONSTRUCT    : 
INOUT                : 10
INPUT                : 8
INTEGER              : 
JOIN                 : 
LARGE                : 
LBRACE               : 
LBRACKET             : 13
LOCALPARAM           : 27
LOGICAL_AND          : 
LOGICAL_NOT          : 
LOGICAL_OR           : 
LPAREN               : 4 31 32 33 35 36 45 50 51 63 64 65
LSHIFT               : 
LSHIFTA              : 
LT                   : 
MEDIUM               : 
MINUS                : 41
MODULE               : 4
MODULO               : 44
MULTI_CONCAT         : 
NE                   : 
NEGEDGE              : 54
NON_BLOCKING_ASSIGN  : 62
NUMBER               : 13 13 47 69
OUTPUT               : 9
PARAMETER            : 26
PLUS                 : 40
POSEDGE              : 53
POWER                : 
RBRACE               : 
RBRACKET             : 13
REAL                 : 
REDUCTION_NAND       : 
REDUCTION_NOR        : 
REDUCTION_XNOR       : 
REG                  : 25
REPEAT               : 
RETURN               : 
RPAREN               : 4 31 32 33 35 36 45 50 51 63 64 65
RSHIFT               : 
RSHIFTA              : 
SCALARED             : 
SEMICOLON            : 4 24 25 26 27 31 38 56 57
SIGNED               : 
SMALL                : 
SPECIFY              : 
STRING               : 48
SUPPLY0              : 
SUPPLY1              : 
TASK                 : 
TIME                 : 
TIMES                : 42
TRI                  : 
TRI0                 : 
TRI1                 : 
TRIAND               : 
TRIOR                : 
TRIREG               : 
VECTORED             : 
WAIT                 : 
WAND                 : 
WHILE                : 
WILD_EQ              : 
WILD_NE              : 
WIRE                 : 24
WOR                  : 
error                : 

Nonterminals, with rules where they appear

always_construct     : 22
begin_end_block      : 60
blocking_assignment  : 56
case_item            : 66 67
case_item_list       : 65 66
case_statement       : 59
constant_expression  : 70
continuous_assign    : 21
design               : 0
empty                : 7 12 14 17 34 37
event_expression     : 50 51
expression           : 30 35 36 38 40 41 42 43 44 45 61 62 63 64 65 68
if_statement         : 58
initial_construct    : 23
instantiation        : 20
module               : 2 3
module_item          : 15 16
module_items         : 4 15
module_list          : 1 2
named_port_connection_list : 31 35
net_declaration      : 18
non_blocking_assignment : 57
parameter_assign_list : 26 27 28
parameter_assignment : 28 29 32 33
parameter_declaration : 19
parameter_value_assignment_opt : 31 32
port                 : 5 6
port_list            : 4 5
port_type_opt        : 8 9 10
range_opt            : 11 24 25
statement            : 49 50 51 52 63 64 64 70 71 73 74
statement_list       : 72 73
term                 : 39 40 41 42 43 44

Parsing method: LALR

state 0

    (0) S' -> . design
    (1) design -> . module_list
    (2) module_list -> . module module_list
    (3) module_list -> . module
    (4) module -> . MODULE ID LPAREN port_list RPAREN SEMICOLON module_items ENDMODULE

    MODULE          shift and go to state 4

    design                         shift and go to state 1
    module_list                    shift and go to state 2
    module                         shift and go to state 3

state 1

    (0) S' -> design .



state 2

    (1) design -> module_list .

    $end            reduce using rule 1 (design -> module_list .)


state 3

    (2) module_list -> module . module_list
    (3) module_list -> module .
    (2) module_list -> . module module_list
    (3) module_list -> . module
    (4) module -> . MODULE ID LPAREN port_list RPAREN SEMICOLON module_items ENDMODULE

    $end            reduce using rule 3 (module_list -> module .)
    MODULE          shift and go to state 4

    module                         shift and go to state 3
    module_list                    shift and go to state 5

state 4

    (4) module -> MODULE . ID LPAREN port_list RPAREN SEMICOLON module_items ENDMODULE

    ID              shift and go to state 6


state 5

    (2) module_list -> module module_list .

    $end            reduce using rule 2 (module_list -> module module_list .)


state 6

    (4) module -> MODULE ID . LPAREN port_list RPAREN SEMICOLON module_items ENDMODULE

    LPAREN          shift and go to state 7


state 7

    (4) module -> MODULE ID LPAREN . port_list RPAREN SEMICOLON module_items ENDMODULE
    (5) port_list -> . port COMMA port_list
    (6) port_list -> . port
    (7) port_list -> . empty
    (8) port -> . INPUT port_type_opt ID
    (9) port -> . OUTPUT port_type_opt ID
    (10) port -> . INOUT port_type_opt ID
    (75) empty -> .

    INPUT           shift and go to state 11
    OUTPUT          shift and go to state 12
    INOUT           shift and go to state 13
    RPAREN          reduce using rule 75 (empty -> .)

    port_list                      shift and go to state 8
    port                           shift and go to state 9
    empty                          shift and go to state 10

state 8

    (4) module -> MODULE ID LPAREN port_list . RPAREN SEMICOLON module_items ENDMODULE

    RPAREN          shift and go to state 14


state 9

    (5) port_list -> port . COMMA port_list
    (6) port_list -> port .

    COMMA           shift and go to state 15
    RPAREN          reduce using rule 6 (port_list -> port .)


state 10

    (7) port_list -> empty .

    RPAREN          reduce using rule 7 (port_list -> empty .)


state 11

    (8) port -> INPUT . port_type_opt ID
    (11) port_type_opt -> . range_opt
    (12) port_type_opt -> . empty
    (13) range_opt -> . LBRACKET NUMBER COLON NUMBER RBRACKET
    (14) range_opt -> . empty
    (75) empty -> .

    LBRACKET        shift and go to state 19
    ID              reduce using rule 75 (empty -> .)

    port_type_opt                  shift and go to state 16
    range_opt                      shift and go to state 17
    empty                          shift and go to state 18

state 12

    (9) port -> OUTPUT . port_type_opt ID
    (11) port_type_opt -> . range_opt
    (12) port_type_opt -> . empty
    (13) range_opt -> . LBRACKET NUMBER COLON NUMBER RBRACKET
    (14) range_opt -> . empty
    (75) empty -> .

    LBRACKET        shift and go to state 19
    ID              reduce using rule 75 (empty -> .)

    port_type_opt                  shift and go to state 20
    range_opt                      shift and go to state 17
    empty                          shift and go to state 18

state 13

    (10) port -> INOUT . port_type_opt ID
    (11) port_type_opt -> . range_opt
    (12) port_type_opt -> . empty
    (13) range_opt -> . LBRACKET NUMBER COLON NUMBER RBRACKET
    (14) range_opt -> . empty
    (75) empty -> .

    LBRACKET        shift and go to state 19
    ID              reduce using rule 75 (empty -> .)

    port_type_opt                  shift and go to state 21
    range_opt                      shift and go to state 17
    empty                          shift and go to state 18

state 14

    (4) module -> MODULE ID LPAREN port_list RPAREN . SEMICOLON module_items ENDMODULE

    SEMICOLON       shift and go to state 22


state 15

    (5) port_list -> port COMMA . port_list
    (5) port_list -> . port COMMA port_list
    (6) port_list -> . port
    (7) port_list -> . empty
    (8) port -> . INPUT port_type_opt ID
    (9) port -> . OUTPUT port_type_opt ID
    (10) port -> . INOUT port_type_opt ID
    (75) empty -> .

    INPUT           shift and go to state 11
    OUTPUT          shift and go to state 12
    INOUT           shift and go to state 13
    RPAREN          reduce using rule 75 (empty -> .)

    port                           shift and go to state 9
    port_list                      shift and go to state 23
    empty                          shift and go to state 10

state 16

    (8) port -> INPUT port_type_opt . ID

    ID              shift and go to state 24


state 17

    (11) port_type_opt -> range_opt .

    ID              reduce using rule 11 (port_type_opt -> range_opt .)


state 18

    (12) port_type_opt -> empty .
    (14) range_opt -> empty .

  ! reduce/reduce conflict for ID resolved using rule 12 (port_type_opt -> empty .)
    ID              reduce using rule 12 (port_type_opt -> empty .)

  ! ID              [ reduce using rule 14 (range_opt -> empty .) ]


state 19

    (13) range_opt -> LBRACKET . NUMBER COLON NUMBER RBRACKET

    NUMBER          shift and go to state 25


state 20

    (9) port -> OUTPUT port_type_opt . ID

    ID              shift and go to state 26


state 21

    (10) port -> INOUT port_type_opt . ID

    ID              shift and go to state 27


state 22

    (4) module -> MODULE ID LPAREN port_list RPAREN SEMICOLON . module_items ENDMODULE
    (15) module_items -> . module_item module_items
    (16) module_items -> . module_item
    (17) module_items -> . empty
    (18) module_item -> . net_declaration
    (19) module_item -> . parameter_declaration
    (20) module_item -> . instantiation
    (21) module_item -> . continuous_assign
    (22) module_item -> . always_construct
    (23) module_item -> . initial_construct
    (75) empty -> .
    (24) net_declaration -> . WIRE range_opt ID SEMICOLON
    (25) net_declaration -> . REG range_opt ID SEMICOLON
    (26) parameter_declaration -> . PARAMETER parameter_assign_list SEMICOLON
    (27) parameter_declaration -> . LOCALPARAM parameter_assign_list SEMICOLON
    (31) instantiation -> . ID parameter_value_assignment_opt ID LPAREN named_port_connection_list RPAREN SEMICOLON
    (38) continuous_assign -> . ASSIGN ID EQUAL expression SEMICOLON
    (50) always_construct -> . ALWAYS AT LPAREN event_expression RPAREN statement
    (51) always_construct -> . ALWAYS LPAREN event_expression RPAREN statement
    (52) always_construct -> . ALWAYS statement
    (49) initial_construct -> . INITIAL statement

    ENDMODULE       reduce using rule 75 (empty -> .)
    WIRE            shift and go to state 38
    REG             shift and go to state 39
    PARAMETER       shift and go to state 40
    LOCALPARAM      shift and go to state 41
    ID              shift and go to state 28
    ASSIGN          shift and go to state 42
    ALWAYS          shift and go to state 43
    INITIAL         shift and go to state 44

    module_items                   shift and go to state 29
    module_item                    shift and go to state 30
    empty                          shift and go to state 31
    net_declaration                shift and go to state 32
    parameter_declaration          shift and go to state 33
    instantiation                  shift and go to state 34
    continuous_assign              shift and go to state 35
    always_construct               shift and go to state 36
    initial_construct              shift and go to state 37

state 23

    (5) port_list -> port COMMA port_list .

    RPAREN          reduce using rule 5 (port_list -> port COMMA port_list .)


state 24

    (8) port -> INPUT port_type_opt ID .

    COMMA           reduce using rule 8 (port -> INPUT port_type_opt ID .)
    RPAREN          reduce using rule 8 (port -> INPUT port_type_opt ID .)


state 25

    (13) range_opt -> LBRACKET NUMBER . COLON NUMBER RBRACKET

    COLON           shift and go to state 45


state 26

    (9) port -> OUTPUT port_type_opt ID .

    COMMA           reduce using rule 9 (port -> OUTPUT port_type_opt ID .)
    RPAREN          reduce using rule 9 (port -> OUTPUT port_type_opt ID .)


state 27

    (10) port -> INOUT port_type_opt ID .

    COMMA           reduce using rule 10 (port -> INOUT port_type_opt ID .)
    RPAREN          reduce using rule 10 (port -> INOUT port_type_opt ID .)


state 28

    (31) instantiation -> ID . parameter_value_assignment_opt ID LPAREN named_port_connection_list RPAREN SEMICOLON
    (32) parameter_value_assignment_opt -> . HASH LPAREN parameter_assignment COMMA parameter_value_assignment_opt RPAREN
    (33) parameter_value_assignment_opt -> . HASH LPAREN parameter_assignment RPAREN
    (34) parameter_value_assignment_opt -> . empty
    (75) empty -> .

    HASH            shift and go to state 47
    ID              reduce using rule 75 (empty -> .)

    parameter_value_assignment_opt shift and go to state 46
    empty                          shift and go to state 48

state 29

    (4) module -> MODULE ID LPAREN port_list RPAREN SEMICOLON module_items . ENDMODULE

    ENDMODULE       shift and go to state 49


state 30

    (15) module_items -> module_item . module_items
    (16) module_items -> module_item .
    (15) module_items -> . module_item module_items
    (16) module_items -> . module_item
    (17) module_items -> . empty
    (18) module_item -> . net_declaration
    (19) module_item -> . parameter_declaration
    (20) module_item -> . instantiation
    (21) module_item -> . continuous_assign
    (22) module_item -> . always_construct
    (23) module_item -> . initial_construct
    (75) empty -> .
    (24) net_declaration -> . WIRE range_opt ID SEMICOLON
    (25) net_declaration -> . REG range_opt ID SEMICOLON
    (26) parameter_declaration -> . PARAMETER parameter_assign_list SEMICOLON
    (27) parameter_declaration -> . LOCALPARAM parameter_assign_list SEMICOLON
    (31) instantiation -> . ID parameter_value_assignment_opt ID LPAREN named_port_connection_list RPAREN SEMICOLON
    (38) continuous_assign -> . ASSIGN ID EQUAL expression SEMICOLON
    (50) always_construct -> . ALWAYS AT LPAREN event_expression RPAREN statement
    (51) always_construct -> . ALWAYS LPAREN event_expression RPAREN statement
    (52) always_construct -> . ALWAYS statement
    (49) initial_construct -> . INITIAL statement

  ! reduce/reduce conflict for ENDMODULE resolved using rule 16 (module_items -> module_item .)
    ENDMODULE       reduce using rule 16 (module_items -> module_item .)
    WIRE            shift and go to state 38
    REG             shift and go to state 39
    PARAMETER       shift and go to state 40
    LOCALPARAM      shift and go to state 41
    ID              shift and go to state 28
    ASSIGN          shift and go to state 42
    ALWAYS          shift and go to state 43
    INITIAL         shift and go to state 44

  ! ENDMODULE       [ reduce using rule 75 (empty -> .) ]

    module_item                    shift and go to state 30
    module_items                   shift and go to state 50
    empty                          shift and go to state 31
    net_declaration                shift and go to state 32
    parameter_declaration          shift and go to state 33
    instantiation                  shift and go to state 34
    continuous_assign              shift and go to state 35
    always_construct               shift and go to state 36
    initial_construct              shift and go to state 37

state 31

    (17) module_items -> empty .

    ENDMODULE       reduce using rule 17 (module_items -> empty .)


state 32

    (18) module_item -> net_declaration .

    WIRE            reduce using rule 18 (module_item -> net_declaration .)
    REG             reduce using rule 18 (module_item -> net_declaration .)
    PARAMETER       reduce using rule 18 (module_item -> net_declaration .)
    LOCALPARAM      reduce using rule 18 (module_item -> net_declaration .)
    ID              reduce using rule 18 (module_item -> net_declaration .)
    ASSIGN          reduce using rule 18 (module_item -> net_declaration .)
    ALWAYS          reduce using rule 18 (module_item -> net_declaration .)
    INITIAL         reduce using rule 18 (module_item -> net_declaration .)
    ENDMODULE       reduce using rule 18 (module_item -> net_declaration .)


state 33

    (19) module_item -> parameter_declaration .

    WIRE            reduce using rule 19 (module_item -> parameter_declaration .)
    REG             reduce using rule 19 (module_item -> parameter_declaration .)
    PARAMETER       reduce using rule 19 (module_item -> parameter_declaration .)
    LOCALPARAM      reduce using rule 19 (module_item -> parameter_declaration .)
    ID              reduce using rule 19 (module_item -> parameter_declaration .)
    ASSIGN          reduce using rule 19 (module_item -> parameter_declaration .)
    ALWAYS          reduce using rule 19 (module_item -> parameter_declaration .)
    INITIAL         reduce using rule 19 (module_item -> parameter_declaration .)
    ENDMODULE       reduce using rule 19 (module_item -> parameter_declaration .)


state 34

    (20) module_item -> instantiation .

    WIRE            reduce using rule 20 (module_item -> instantiation .)
    REG             reduce using rule 20 (module_item -> instantiation .)
    PARAMETER       reduce using rule 20 (module_item -> instantiation .)
    LOCALPARAM      reduce using rule 20 (module_item -> instantiation .)
    ID              reduce using rule 20 (module_item -> instantiation .)
    ASSIGN          reduce using rule 20 (module_item -> instantiation .)
    ALWAYS          reduce using rule 20 (module_item -> instantiation .)
    INITIAL         reduce using rule 20 (module_item -> instantiation .)
    ENDMODULE       reduce using rule 20 (module_item -> instantiation .)


state 35

    (21) module_item -> continuous_assign .

    WIRE            reduce using rule 21 (module_item -> continuous_assign .)
    REG             reduce using rule 21 (module_item -> continuous_assign .)
    PARAMETER       reduce using rule 21 (module_item -> continuous_assign .)
    LOCALPARAM      reduce using rule 21 (module_item -> continuous_assign .)
    ID              reduce using rule 21 (module_item -> continuous_assign .)
    ASSIGN          reduce using rule 21 (module_item -> continuous_assign .)
    ALWAYS          reduce using rule 21 (module_item -> continuous_assign .)
    INITIAL         reduce using rule 21 (module_item -> continuous_assign .)
    ENDMODULE       reduce using rule 21 (module_item -> continuous_assign .)


state 36

    (22) module_item -> always_construct .

    WIRE            reduce using rule 22 (module_item -> always_construct .)
    REG             reduce using rule 22 (module_item -> always_construct .)
    PARAMETER       reduce using rule 22 (module_item -> always_construct .)
    LOCALPARAM      reduce using rule 22 (module_item -> always_construct .)
    ID              reduce using rule 22 (module_item -> always_construct .)
    ASSIGN          reduce using rule 22 (module_item -> always_construct .)
    ALWAYS          reduce using rule 22 (module_item -> always_construct .)
    INITIAL         reduce using rule 22 (module_item -> always_construct .)
    ENDMODULE       reduce using rule 22 (module_item -> always_construct .)


state 37

    (23) module_item -> initial_construct .

    WIRE            reduce using rule 23 (module_item -> initial_construct .)
    REG             reduce using rule 23 (module_item -> initial_construct .)
    PARAMETER       reduce using rule 23 (module_item -> initial_construct .)
    LOCALPARAM      reduce using rule 23 (module_item -> initial_construct .)
    ID              reduce using rule 23 (module_item -> initial_construct .)
    ASSIGN          reduce using rule 23 (module_item -> initial_construct .)
    ALWAYS          reduce using rule 23 (module_item -> initial_construct .)
    INITIAL         reduce using rule 23 (module_item -> initial_construct .)
    ENDMODULE       reduce using rule 23 (module_item -> initial_construct .)


state 38

    (24) net_declaration -> WIRE . range_opt ID SEMICOLON
    (13) range_opt -> . LBRACKET NUMBER COLON NUMBER RBRACKET
    (14) range_opt -> . empty
    (75) empty -> .

    LBRACKET        shift and go to state 19
    ID              reduce using rule 75 (empty -> .)

    range_opt                      shift and go to state 51
    empty                          shift and go to state 52

state 39

    (25) net_declaration -> REG . range_opt ID SEMICOLON
    (13) range_opt -> . LBRACKET NUMBER COLON NUMBER RBRACKET
    (14) range_opt -> . empty
    (75) empty -> .

    LBRACKET        shift and go to state 19
    ID              reduce using rule 75 (empty -> .)

    range_opt                      shift and go to state 53
    empty                          shift and go to state 52

state 40

    (26) parameter_declaration -> PARAMETER . parameter_assign_list SEMICOLON
    (28) parameter_assign_list -> . parameter_assignment COMMA parameter_assign_list
    (29) parameter_assign_list -> . parameter_assignment
    (30) parameter_assignment -> . ID EQUAL expression

    ID              shift and go to state 56

    parameter_assign_list          shift and go to state 54
    parameter_assignment           shift and go to state 55

state 41

    (27) parameter_declaration -> LOCALPARAM . parameter_assign_list SEMICOLON
    (28) parameter_assign_list -> . parameter_assignment COMMA parameter_assign_list
    (29) parameter_assign_list -> . parameter_assignment
    (30) parameter_assignment -> . ID EQUAL expression

    ID              shift and go to state 56

    parameter_assign_list          shift and go to state 57
    parameter_assignment           shift and go to state 55

state 42

    (38) continuous_assign -> ASSIGN . ID EQUAL expression SEMICOLON

    ID              shift and go to state 58


state 43

    (50) always_construct -> ALWAYS . AT LPAREN event_expression RPAREN statement
    (51) always_construct -> ALWAYS . LPAREN event_expression RPAREN statement
    (52) always_construct -> ALWAYS . statement
    (56) statement -> . blocking_assignment SEMICOLON
    (57) statement -> . non_blocking_assignment SEMICOLON
    (58) statement -> . if_statement
    (59) statement -> . case_statement
    (60) statement -> . begin_end_block
    (61) blocking_assignment -> . ID BLOCKING_ASSIGN expression
    (62) non_blocking_assignment -> . ID NON_BLOCKING_ASSIGN expression
    (63) if_statement -> . IF LPAREN expression RPAREN statement
    (64) if_statement -> . IF LPAREN expression RPAREN statement ELSE statement
    (65) case_statement -> . CASE LPAREN expression RPAREN case_item_list ENDCASE
    (72) begin_end_block -> . BEGIN statement_list END

    AT              shift and go to state 59
    LPAREN          shift and go to state 60
    ID              shift and go to state 67
    IF              shift and go to state 68
    CASE            shift and go to state 69
    BEGIN           shift and go to state 70

    statement                      shift and go to state 61
    blocking_assignment            shift and go to state 62
    non_blocking_assignment        shift and go to state 63
    if_statement                   shift and go to state 64
    case_statement                 shift and go to state 65
    begin_end_block                shift and go to state 66

state 44

    (49) initial_construct -> INITIAL . statement
    (56) statement -> . blocking_assignment SEMICOLON
    (57) statement -> . non_blocking_assignment SEMICOLON
    (58) statement -> . if_statement
    (59) statement -> . case_statement
    (60) statement -> . begin_end_block
    (61) blocking_assignment -> . ID BLOCKING_ASSIGN expression
    (62) non_blocking_assignment -> . ID NON_BLOCKING_ASSIGN expression
    (63) if_statement -> . IF LPAREN expression RPAREN statement
    (64) if_statement -> . IF LPAREN expression RPAREN statement ELSE statement
    (65) case_statement -> . CASE LPAREN expression RPAREN case_item_list ENDCASE
    (72) begin_end_block -> . BEGIN statement_list END

    ID              shift and go to state 67
    IF              shift and go to state 68
    CASE            shift and go to state 69
    BEGIN           shift and go to state 70

    statement                      shift and go to state 71
    blocking_assignment            shift and go to state 62
    non_blocking_assignment        shift and go to state 63
    if_statement                   shift and go to state 64
    case_statement                 shift and go to state 65
    begin_end_block                shift and go to state 66

state 45

    (13) range_opt -> LBRACKET NUMBER COLON . NUMBER RBRACKET

    NUMBER          shift and go to state 72


state 46

    (31) instantiation -> ID parameter_value_assignment_opt . ID LPAREN named_port_connection_list RPAREN SEMICOLON

    ID              shift and go to state 73


state 47

    (32) parameter_value_assignment_opt -> HASH . LPAREN parameter_assignment COMMA parameter_value_assignment_opt RPAREN
    (33) parameter_value_assignment_opt -> HASH . LPAREN parameter_assignment RPAREN

    LPAREN          shift and go to state 74


state 48

    (34) parameter_value_assignment_opt -> empty .

    ID              reduce using rule 34 (parameter_value_assignment_opt -> empty .)
    RPAREN          reduce using rule 34 (parameter_value_assignment_opt -> empty .)


state 49

    (4) module -> MODULE ID LPAREN port_list RPAREN SEMICOLON module_items ENDMODULE .

    MODULE          reduce using rule 4 (module -> MODULE ID LPAREN port_list RPAREN SEMICOLON module_items ENDMODULE .)
    $end            reduce using rule 4 (module -> MODULE ID LPAREN port_list RPAREN SEMICOLON module_items ENDMODULE .)


state 50

    (15) module_items -> module_item module_items .

    ENDMODULE       reduce using rule 15 (module_items -> module_item module_items .)


state 51

    (24) net_declaration -> WIRE range_opt . ID SEMICOLON

    ID              shift and go to state 75


state 52

    (14) range_opt -> empty .

    ID              reduce using rule 14 (range_opt -> empty .)


state 53

    (25) net_declaration -> REG range_opt . ID SEMICOLON

    ID              shift and go to state 76


state 54

    (26) parameter_declaration -> PARAMETER parameter_assign_list . SEMICOLON

    SEMICOLON       shift and go to state 77


state 55

    (28) parameter_assign_list -> parameter_assignment . COMMA parameter_assign_list
    (29) parameter_assign_list -> parameter_assignment .

    COMMA           shift and go to state 78
    SEMICOLON       reduce using rule 29 (parameter_assign_list -> parameter_assignment .)


state 56

    (30) parameter_assignment -> ID . EQUAL expression

    EQUAL           shift and go to state 79


state 57

    (27) parameter_declaration -> LOCALPARAM parameter_assign_list . SEMICOLON

    SEMICOLON       shift and go to state 80


state 58

    (38) continuous_assign -> ASSIGN ID . EQUAL expression SEMICOLON

    EQUAL           shift and go to state 81


state 59

    (50) always_construct -> ALWAYS AT . LPAREN event_expression RPAREN statement

    LPAREN          shift and go to state 82


state 60

    (51) always_construct -> ALWAYS LPAREN . event_expression RPAREN statement
    (53) event_expression -> . POSEDGE ID
    (54) event_expression -> . NEGEDGE ID
    (55) event_expression -> . ID

    POSEDGE         shift and go to state 84
    NEGEDGE         shift and go to state 86
    ID              shift and go to state 85

    event_expression               shift and go to state 83

state 61

    (52) always_construct -> ALWAYS statement .

    WIRE            reduce using rule 52 (always_construct -> ALWAYS statement .)
    REG             reduce using rule 52 (always_construct -> ALWAYS statement .)
    PARAMETER       reduce using rule 52 (always_construct -> ALWAYS statement .)
    LOCALPARAM      reduce using rule 52 (always_construct -> ALWAYS statement .)
    ID              reduce using rule 52 (always_construct -> ALWAYS statement .)
    ASSIGN          reduce using rule 52 (always_construct -> ALWAYS statement .)
    ALWAYS          reduce using rule 52 (always_construct -> ALWAYS statement .)
    INITIAL         reduce using rule 52 (always_construct -> ALWAYS statement .)
    ENDMODULE       reduce using rule 52 (always_construct -> ALWAYS statement .)


state 62

    (56) statement -> blocking_assignment . SEMICOLON

    SEMICOLON       shift and go to state 87


state 63

    (57) statement -> non_blocking_assignment . SEMICOLON

    SEMICOLON       shift and go to state 88


state 64

    (58) statement -> if_statement .

    WIRE            reduce using rule 58 (statement -> if_statement .)
    REG             reduce using rule 58 (statement -> if_statement .)
    PARAMETER       reduce using rule 58 (statement -> if_statement .)
    LOCALPARAM      reduce using rule 58 (statement -> if_statement .)
    ID              reduce using rule 58 (statement -> if_statement .)
    ASSIGN          reduce using rule 58 (statement -> if_statement .)
    ALWAYS          reduce using rule 58 (statement -> if_statement .)
    INITIAL         reduce using rule 58 (statement -> if_statement .)
    ENDMODULE       reduce using rule 58 (statement -> if_statement .)
    IF              reduce using rule 58 (statement -> if_statement .)
    CASE            reduce using rule 58 (statement -> if_statement .)
    BEGIN           reduce using rule 58 (statement -> if_statement .)
    END             reduce using rule 58 (statement -> if_statement .)
    ELSE            reduce using rule 58 (statement -> if_statement .)
    DEFAULT         reduce using rule 58 (statement -> if_statement .)
    NUMBER          reduce using rule 58 (statement -> if_statement .)
    LPAREN          reduce using rule 58 (statement -> if_statement .)
    STRING          reduce using rule 58 (statement -> if_statement .)
    ENDCASE         reduce using rule 58 (statement -> if_statement .)


state 65

    (59) statement -> case_statement .
